Fix layer styles to handle FG->BG gradients correctly

All the dynamic gradients should be baked before assigning to the
layer.

BUG:445135
(cherry picked from commit 46e8344d6fa2deebb9d5e6da59f9b6d9bc7f6f2c)