libs/ui/kis_layer_manager.cc
@@ -901,9 +901,12 @@ KisNodeSP KisLayerManager::addFileLayer(KisNodeSP activeNode)
     return 0;
 }
 
-void updateLayerStyles(KisLayerSP layer, KisDlgLayerStyle *dlg)
+void updateLayerStyles(KisLayerSP layer, KisDlgLayerStyle *dlg, KoCanvasResourcesInterfaceSP canvasResroucesInterface)
 {
-    KisSetLayerStyleCommand::updateLayerStyle(layer, dlg->style()->cloneWithResourcesSnapshot());
+    KisSetLayerStyleCommand::updateLayerStyle(layer,
+                                              dlg->style()->cloneWithResourcesSnapshot(
+                                                  KisGlobalResourcesInterface::instance(),
+                                                  canvasResroucesInterface));
 }
 
 void KisLayerManager::layerStyle()
@@ -917,13 +920,16 @@ void KisLayerManager::layerStyle()
     if (!m_view->blockUntilOperationsFinished(image)) return;
     if (!m_view->nodeManager()->canModifyLayer(layer)) return;
 
+    KoCanvasResourcesInterfaceSP canvasResroucesInterface = m_view->canvasBase()->resourceManager()->canvasResourcesInterface();
+
     KisPSDLayerStyleSP oldStyle;
     if (layer->layerStyle()) {
         oldStyle = layer->layerStyle()->clone().dynamicCast<KisPSDLayerStyle>();
 
     } else {
         oldStyle = toQShared(new KisPSDLayerStyle("", KisGlobalResourcesInterface::instance()))
-                ->cloneWithResourcesSnapshot();
+                ->cloneWithResourcesSnapshot(KisGlobalResourcesInterface::instance(),
+                                             canvasResroucesInterface);
     }
 
     KisPSDLayerStyleSP newStyle = oldStyle->clone().dynamicCast<KisPSDLayerStyle>();
@@ -931,12 +937,14 @@ void KisLayerManager::layerStyle()
 
     KisDlgLayerStyle dlg(newStyle, m_view->canvasResourceProvider());
 
-    std::function<void ()> updateCall(std::bind(updateLayerStyles, layer, &dlg));
+    std::function<void ()> updateCall(std::bind(updateLayerStyles, layer, &dlg, canvasResroucesInterface));
     SignalToFunctionProxy proxy(updateCall);
     connect(&dlg, SIGNAL(configChanged()), &proxy, SLOT(start()));
 
     if (dlg.exec() == QDialog::Accepted) {
-        KisPSDLayerStyleSP newStyle = dlg.style()->cloneWithResourcesSnapshot();
+        KisPSDLayerStyleSP newStyle =
+            dlg.style()->cloneWithResourcesSnapshot(KisGlobalResourcesInterface::instance(),
+                                                    canvasResroucesInterface);
 
         KUndo2CommandSP command = toQShared(
                     new KisSetLayerStyleCommand(layer, oldStyle, newStyle));
